php->html, html->php
note that just .php gets the interpreter running

--- a/PHP_TAG_1/index.html
+++ b/PHP_TAG_1/index.html
@@ -1,22 +1,3 @@
-<?php 
-$greeting = 'Hello World!';
-
-/* echo($greeting);
-echo(1 + 1);
-echo(1 . $greeting);
-echo(2 * 3 . $greeting);
- */
-
-$foo = 'bar';
-$foobar = '&%foo';
-$foo = 'baz';
-$foobar = 'foobarbaz';
-
-echo $foo;
-
-?>
-<!-- will be interpreted bcs .php will deliver HTML with <?php for executable php code ?> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +6,9 @@ echo $foo;
     <title>Hello PHP</title>
 </head>
 <body>
+
+    <!-- will not be executed bcs .html is static and will be not interpreted -->
+
     <?php echo "Hello" ?>
 
     <h1><?php echo "Hello"; ?></h1>
