multirow php statement

--- a/PHP_TAG_1/index.html
+++ b/PHP_TAG_1/index.html
@@ -8,6 +8,7 @@
 <body>
 
     <!-- will not be executed bcs .html is static and will be not interpreted -->
+    <!-- the browser does not know the <?php tag ?> -->
 
     <?php echo "Hello" ?>
 
